<resources>
    <string name="app_name">Yummm</string>
    <string name="stripe_publishable_key">pk_test_qb78IFDvtTr8mC7hBzqiPzC3</string>
    <string name="session_token"></string>
    <string name="ok">ok</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="verify">Verify</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="googlemap_api_key">AIzaSyCg4h3h3TCzOkvjegPMclSIlnMHPTtJyl4</string>
    <string name="api_key">AIzaSyCcHs-u_T9-TQ7SO-Yh6WWCFRHyXnEbWco</string>
    <string name="valid_name">Please enter valid name</string>
    <string name="valid_last_name">Please enter valid last name</string>
    <string name="valid_email">Please enter valid email Id</string>
    <string name="valid_pwd">Please enter valid password</string>
    <string name="valid_password">Password must contain minimum 6 characters having at least 1 number and 1 lowercase letter</string>
    <string name="same_password">Password does not match</string>
    <string name="valid_address">Please enter valid address</string>
    <string name="valid_city">Please enter valid city</string>
    <string name="valid_zip">Please enter valid zip code</string>
    <string name="valid_phone">Please enter valid phone number</string>
    <string name="valid_password_blank">Please enter confirm password</string>
    <string name="valid_new_password">Please enter new password</string>
    <string name="internet_toast">Please Check your internet connectivity</string>
    <string name="under_development">Under Development</string>
    <string name="valid_code">Please enter valid verification code</string>
    <string name="valid_old_pass">Please enter correct old password</string>
    <string name="go_restaurant">Go To Restaurant</string>
    <string name="phn_verify">Phone Verification</string>
    <string name="sense">The sense that they all have great food and a fun at mosphere. </string>
    <string name="enter_verification_code">Enter verification code that was sent to your registered email id. </string>
    <string name="varification_code">Enter Verification Code </string>
    <string name="phn_number">Phone Number</string>
    <string name="dont_receive_code">Don\'t receive the verification code? \n <u>Click here to resend.</u></string>
    <string name="dummy">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="dont_account">Don\'t have an account? Sign Up </string>
    <string name="enter_phn_number">Please enter your phone no and we will send you an verification code to reset your password </string>
    <string name="phn_no_not_found">Phone Number not found.</string>
    <string name="not_found">The phone number specified was not found in our system. Please make sure to use the phone number that was used during registration. </string>
    <string name="search_article">Search Article</string>
    <string name="search_dishes">Search Dishes</string>
    <string name="reset_password">Reset Password</string>
    <string name="choose_new_password">Choose your new password</string>
    <string name="new_password">New Password</string>
    <string name="verify_code_send">Verification code Send !</string>
    <string name="congrats">Congratulations!!!</string>
    <string name="change_successfully">Your password has been changed successfully. </string>
    <string name="home">Home</string>
    <string name="my_order">My Orders</string>
    <string name="wishlist">Wish List</string>
    <string name="book_table">Book a Table</string>
    <string name="order_history">Order History</string>
    <string name="manage_card">Manage Cards</string>
    <string name="loyalty">Loyalty</string>
    <string name="scan_qr">Scan QR Code </string>
    <string name="setting">Setting</string>
    <string name="referal_code">Referral Code</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate_us_play_store">Rate us on Play Store</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="old_password">Old Password</string>
    <string name="nearby">Nearby</string>
    <string name="bysales">BySales</string>
    <string name="restaurent">Restaurant</string>
    <string name="filter">Filter</string>
    <string name="please_wait">Please wait</string>
    <string name="otp_send">OTP Send to your registered email id for now!</string>
    <string name="food_deliver">Food Delivered</string>
    <string name="avoid_queue">Avoid Queue</string>
    <string name="login_first">Please login first.</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="old_new">You cannot enter same old and new password</string>
    <string name="info">Info</string>
    <string name="menu">Menu</string>
    <string name="review">Review</string>
    <string name="map">Map</string>
    <string name="points">Points</string>
    <string name="_default">Default</string>
    <string name="popular">Popular</string>
    <string name="special">Special</string>
    <string name="_new">New</string>
    <string name="organic">Organic</string>
    <string name="vegan">Vegan</string>
    <string name="res_info">Restaurant History</string>
    <string name="hours">Hours</string>
    <string name="add_info">Additional Information</string>
    <string name="food_specialities">Food Specialities</string>
    <string name="nut_free">Nut Free</string>
    <string name="food">Food</string>
    <string name="service">Service</string>
    <string name="delivery">Delivery</string>
    <string name="enviroment">Enviroment</string>
    <string name="description">Description</string>
    <string name="apply_Coupon">Apply Coupon</string>
    <string name="qty">Qty</string>
    <string name="choice_size">Choice of Size</string>
    <string name="choice_flavor">Choice of Flavor</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_account">Are you sure you want to delete account?</string>
    <string name="by_signing_up_you_agree_to">By Signing up, you agree to </string>
    <string name="terms_amp_conditions"><u>Terms &amp; Conditions.</u></string>
    <string name="accept_privacy_policy"><u>privacy policy</u></string>
    <string name="chk_terms_amp_conditions">Please accept terms and conditions to proceed</string>
    <string name="cart">Cart</string>
    <string name="order_list">Order List</string>
    <string name="details">Details</string>
    <string name="subtotal_before">Subtotal before discount</string>
    <string name="discount">Discount</string>
    <string name="subtotal">Subtotal</string>
    <string name="service_fee">Service fee</string>
    <string name="service_tax">Service tax</string>
    <string name="vat">Vat</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="add_cart">Add to Cart</string>
    <string name="cart_empty">Your cart is Empty.</string>
    <string name="person">Persons</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="personal_detail">Personal Details</string>
    <string name="valid_person">please enter number of person</string>
    <string name="valid_date">please select booking date</string>
    <string name="valid_time">please select booking time</string>
    <string name="booking_table">Booking Status</string>
    <string name="date_time">Date &amp; Time:</string>
    <string name="payment">Payment</string>
    <string name="added_card">Added Card</string>
    <string name="send">Send</string>
    <string name="pay">Pay</string>
    <string name="or">OR</string>
    <string name="add_new_card">Add New Card</string>
    <string name="add_now">Add Now</string>
    <string name="valid_card_detail">Please enter valid card detail.</string>
    <string name="add_item_cart">Please add item in your cart.</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="select_from_date">Please select from date</string>
    <string name="delivery_address">Delivery Details</string>
    <string name="add_new_address">Add New Address</string>
    <string name="proceed_payment">Proceed To Payment</string>
    <string name="valid_add_card">Please add card</string>
    <string name="order_detail">Order Detail</string>
    <string name="rate_restaurant">Rate the Restaurant</string>
    <string name="share_feedback">Please share your experiance with us, it will help us to provide you better service </string>
    <string name="valid_share_feedback">Please share your experiance with us.</string>
    <string name="rate_review">Rating &amp; Review</string>
    <string name="no_order">No Order Yet.</string>
    <string name="give_review">Give your review here </string>
    <string name="no_booking_table">No Booking Table Yet...</string>
    <string name="give_rating">Please Give Rating.</string>
    <string name="membership_point">Membership Stamp Points</string>
    <string name="previous_search">Previous Search</string>
    <string name="choose_option">Choose Option</string>
    <string name="dinning">Dining</string>
    <string name="cancel">Cancel</string>
    <string name="restaurant_id">Restaurant ID</string>
    <string name="table_no">Table No</string>
    <string name="valid_table_no">Please enter table no</string>
    <string name="valid_res_id">Please enter restaurant id</string>
    <string name="book_for_dining">Book For Dining</string>
    <string name="notification">Notifications</string>
    <string name="barcode_scann">Bar Code Successfully Scan.</string>
    <string name="enter_coupan">please enter coupan code</string>
    <string name="invite_friend_text">Invite a friend to signup, Earn coupon code.</string>
    <string name="share_refral_code">Share your referral code</string>
    <string name="invite_friend_">Invite Contacts</string>
    <string name="refral_code_is">Your referral code is -</string>
</resources>