<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/canvas_progressdialog"
    android:layout_marginLeft="@dimen/_5sdp"
    android:layout_marginRight="@dimen/_5sdp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:fontFamily="@font/myriadpro_regular"
        android:text="@string/choose_option"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_15ssp" />
    <View android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/view_color"/>
    <TextView
        android:id="@+id/text_dinning"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:fontFamily="@font/myriadpro_regular"
        android:text="@string/dinning"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_15ssp" />
    <View android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/view_color"/>
    <TextView
        android:id="@+id/text_delivery"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:fontFamily="@font/myriadpro_regular"
        android:text="@string/delivery"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_15ssp" />
    <View android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/view_color"/>
    <TextView
        android:id="@+id/text_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:fontFamily="@font/myriadpro_regular"
        android:text="@string/cancel"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_15ssp" />
</LinearLayout>