<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/hide_keyboard"
    tools:context=".menu_list.MenuActivity">
    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/arrow_red" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_toRightOf="@+id/img_back">
            <ImageView
                android:id="@+id/img_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/mark" />
            <ImageView
                android:id="@+id/img_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:layout_toRightOf="@id/img_mark"
                android:src="@drawable/notification" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/r3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/r1">
        <TextView
            android:id="@+id/edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myriadpro_regular"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_18ssp"/>
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/view_color"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@+id/edit_profile"/>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scroll_view"
        android:fillViewport="true"
        android:layout_below="@+id/r3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/relative_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/first_name"
                        style="@style/TextviewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:text="@string/first_name" />

                    <EditText
                        android:id="@+id/edt_first_name"
                        style="@style/ProfileEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:inputType="text" />

                    <TextView
                        style="@style/TextviewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:text="@string/last_name" />

                    <EditText
                        android:id="@+id/edt_last_name"
                        style="@style/ProfileEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:inputType="text" />

                    <TextView
                        style="@style/TextviewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:text="@string/email" />

                    <EditText
                        android:id="@+id/edt_email"
                        style="@style/ProfileEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:inputType="text" />

                    <TextView
                        style="@style/TextviewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:text="@string/mobile" />

                    <EditText
                        android:id="@+id/edt_mobile"
                        style="@style/ProfileEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:inputType="phone" />

                    <TextView
                        style="@style/TextviewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:text="@string/address" />

                    <EditText
                        android:id="@+id/edt_address"
                        style="@style/ProfileEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:focusable="false"
                        android:inputType="phone" />

                    <TextView
                        style="@style/TextviewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:text="@string/city" />

                    <EditText
                        android:id="@+id/edt_city"
                        style="@style/ProfileEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:focusable="false"
                        android:fontFamily="@font/myriadpro_regular"
                        android:inputType="text" />
                    <TextView
                        style="@style/TextviewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:text="@string/zip_code" />

                    <EditText
                        android:id="@+id/edt_zip_code"
                        style="@style/ProfileEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:inputType="number"
                        android:focusable="false"
                        android:imeOptions="actionDone"
                        android:maxLength="6"/>

                    <TextView
                        android:id="@+id/text_chnge_pwd"
                        style="@style/TextviewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:text="@string/change_password"
                        android:textColor="@color/app_color"/>

                    <EditText
                        android:id="@+id/edt_change_password"
                        style="@style/ProfileEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:focusable="false"
                        android:text="xxxxxxx"
                        android:drawableRight="@drawable/right_arrow"
                        android:fontFamily="@font/myriadpro_regular"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/text_delete_account"
                        style="@style/TextviewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:text="@string/delete_account"
                        android:padding="@dimen/_5sdp"
                        android:visibility="gone"
                        android:textColor="@color/app_color"/>

                    <Button
                        android:id="@+id/btn_save"
                        style="@style/ButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:fontFamily="@font/myriadpro_regular"
                        android:text="@string/save" />
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
    <!--<include layout="@layout/bottom_layout"/>-->
</RelativeLayout>